tests/fixtures/invalid/pow_float_float_bool.py
# Cannot call pow() with Float, Float, Bool
x = pow(1.0, 1.0, True)
